<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/text_welcome"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonAno"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWelcome"
        android:layout_centerHorizontal="true"
        android:layout_margin="35dp"
        android:background="@layout/blue_button"
        android:text="@string/text_button_anonymous" />

    <Button
        android:id="@+id/buttonReg"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAno"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@layout/blue_button"
        android:text="@string/text_button_register" />

    <EditText
        android:id="@+id/editName"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonReg"
        android:layout_centerHorizontal="true"
        android:layout_margin="35dp"
        android:ems="10"
        android:hint="@string/editText_name"
        android:inputType="textPersonName" />

</RelativeLayout>